Adicionando o Arquivo Java Script

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <section class="conteudo-principal">
       <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
       <div class="botoes">
-        <button class="botao">Curso de Design da V4</button>
+        <button class="botao ativo">Curso de Design da V4</button>
         <button class="botao">Início da Operação V4 Ricciard & Co</button>
         <button class="botao">Início Oficial dos Projetos com Claudio Medeiros</button>
         <button class="botao">Organizar meu Orçamento Familiar</button>
       </div>
     </section>
+    <script src="main.js"></script>
   </body>
 </html>
