--- a/index.html
+++ b/index.html
@@ -10,12 +10,46 @@
   <body>
     <section class="conteudo-principal">
       <h2 class="titulo-principal">Meus Objetivos do ano<span>_</span></h2>
+      <div class="conteudo">
       <div class="botoes">
         <button class="botao ativo">Curso de Design da V4</button>
         <button class="botao">Início da Operação V4 Ricciard & Co</button>
         <button class="botao">Início Oficial dos Projetos com Claudio Medeiros</button>
         <button class="botao">Organizar meu Orçamento Familiar</button>
       </div>
+      <div class="abas-textos">
+        <div class="aba-conteudo">
+          <h3 class="aba-conteudo-titulo-principal">Estudar o curso completo de Design da V4 Company</h3>
+          <h4 class="aba-conteudo-titulo-secundario">
+            Tempo para completar o objetivo
+          </h4>
+        </div>
+        <div class="aba-conteudo">
+          <h3 class="aba-conteudo-titulo-principal">
+            Estar familiarizado com todos os termos e tecnicas necessárias para o início da operação
+          </h3>
+          <h4 class="aba-conteudo-titulo-secundario">
+            Tempo para completar o objetivo
+          </h4>
+        </div>
+        <div class="aba-conteudo">
+          <h3 class="aba-conteudo-titulo-principal">
+            Ter organizado a linha editorial de conteúdos e tarefas a executar em conjunto com o Claudio
+          </h3>
+          <h4 class="aba-conteudo-titulo-secundario">
+            Tempo para completar o objetivo
+          </h4>
+        </div>
+        <div class="aba-conteudo">
+          <h3 class="aba-conteudo-titulo-principal">
+            Atualizar com precisão todos os dados presentes em meu DashPlan da Portifel
+          </h3>
+          <h4 class="aba-conteudo-titulo-secundario">
+            Tempo para completar o objetivo
+          </h4>
+        </div>
+      </div>
+    </div>
     </section>
     <script src="main.js"></script>
   </body>
